pal/outputs3/penguins_in_a_table_Java.txt
  0%|          | 0/149 [00:00<?, ?it/s]  1%|          | 1/149 [00:19<47:24, 19.22s/it]  1%|▏         | 2/149 [01:11<1:35:18, 38.90s/it]  2%|▏         | 3/149 [01:17<57:49, 23.76s/it]    3%|▎         | 4/149 [02:23<1:37:57, 40.54s/it]  3%|▎         | 5/149 [03:11<1:43:13, 43.01s/it]llm_build/77ae3266-2bdd-11f0-826f-e1a5a23921f1/Solution.java:19: error: array required, but Object found
        penguins.sort(Comparator.comparingInt(x -> Integer.parseInt(x[2])).reversed());
                                                                     ^
1 error
  4%|▍         | 6/149 [03:18<1:13:30, 30.85s/it]  5%|▍         | 7/149 [04:10<1:29:28, 37.80s/it]  5%|▌         | 8/149 [04:21<1:08:59, 29.36s/it]  6%|▌         | 9/149 [05:12<1:23:43, 35.88s/it]  7%|▋         | 10/149 [05:19<1:02:59, 27.19s/it]  7%|▋         | 11/149 [06:18<1:24:51, 36.90s/it]  8%|▊         | 12/149 [06:27<1:05:00, 28.47s/it]  9%|▊         | 13/149 [07:20<1:20:54, 35.69s/it]  9%|▉         | 14/149 [08:24<1:39:25, 44.19s/it] 10%|█         | 15/149 [09:29<1:52:59, 50.59s/it] 11%|█         | 16/149 [10:27<1:56:51, 52.72s/it] 11%|█▏        | 17/149 [11:13<1:51:53, 50.86s/it] 12%|█▏        | 18/149 [11:24<1:24:44, 38.81s/it] 13%|█▎        | 19/149 [11:37<1:07:19, 31.07s/it] 13%|█▎        | 20/149 [12:11<1:08:47, 32.00s/it] 14%|█▍        | 21/149 [12:20<53:28, 25.06s/it]   15%|█▍        | 22/149 [12:28<42:08, 19.91s/it] 15%|█▌        | 23/149 [13:26<1:06:05, 31.47s/it] 16%|█▌        | 24/149 [13:33<50:12, 24.10s/it]   17%|█▋        | 25/149 [14:11<58:18, 28.21s/it] 17%|█▋        | 26/149 [14:31<52:35, 25.66s/it] 18%|█▊        | 27/149 [15:28<1:11:35, 35.21s/it] 19%|█▉        | 28/149 [15:36<54:25, 26.99s/it]   19%|█▉        | 29/149 [16:12<59:29, 29.74s/it] 20%|██        | 30/149 [16:34<54:05, 27.28s/it] 21%|██        | 31/149 [16:41<41:45, 21.24s/it] 21%|██▏       | 32/149 [17:14<48:34, 24.91s/it] 22%|██▏       | 33/149 [17:42<49:28, 25.59s/it] 23%|██▎       | 34/149 [18:20<56:15, 29.35s/it] 23%|██▎       | 35/149 [18:37<49:07, 25.86s/it] 24%|██▍       | 36/149 [19:38<1:08:10, 36.20s/it] 25%|██▍       | 37/149 [19:52<55:00, 29.47s/it]   26%|██▌       | 38/149 [20:13<50:02, 27.05s/it] 26%|██▌       | 39/149 [20:38<48:15, 26.33s/it] 27%|██▋       | 40/149 [20:47<38:48, 21.36s/it] 28%|██▊       | 41/149 [21:13<40:45, 22.64s/it] 28%|██▊       | 42/149 [21:36<40:47, 22.87s/it] 29%|██▉       | 43/149 [21:44<32:11, 18.22s/it] 30%|██▉       | 44/149 [22:15<38:42, 22.12s/it] 30%|███       | 45/149 [22:41<40:20, 23.27s/it] 31%|███       | 46/149 [22:48<31:20, 18.26s/it] 32%|███▏      | 47/149 [23:23<39:59, 23.52s/it] 32%|███▏      | 48/149 [23:44<38:07, 22.65s/it] 33%|███▎      | 49/149 [24:16<42:37, 25.58s/it] 34%|███▎      | 50/149 [24:44<43:09, 26.16s/it] 34%|███▍      | 51/149 [25:15<45:00, 27.55s/it] 35%|███▍      | 52/149 [25:42<44:19, 27.42s/it] 36%|███▌      | 53/149 [25:45<32:27, 20.28s/it] 36%|███▌      | 54/149 [25:48<23:34, 14.89s/it] 37%|███▋      | 55/149 [26:41<41:30, 26.50s/it] 38%|███▊      | 56/149 [27:16<44:58, 29.02s/it] 38%|███▊      | 57/149 [28:21<1:00:44, 39.62s/it] 39%|███▉      | 58/149 [29:16<1:07:29, 44.50s/it] 40%|███▉      | 59/149 [30:18<1:14:36, 49.74s/it] 40%|████      | 60/149 [30:39<1:00:44, 40.95s/it] 41%|████      | 61/149 [30:46<45:11, 30.81s/it]   42%|████▏     | 62/149 [30:58<36:23, 25.10s/it] 42%|████▏     | 63/149 [31:15<32:34, 22.73s/it] 43%|████▎     | 64/149 [31:24<26:11, 18.49s/it] 44%|████▎     | 65/149 [31:37<23:53, 17.07s/it] 44%|████▍     | 66/149 [32:24<35:49, 25.90s/it] 45%|████▍     | 67/149 [32:40<31:17, 22.90s/it] 46%|████▌     | 68/149 [33:20<38:02, 28.18s/it] 46%|████▋     | 69/149 [33:41<34:46, 26.09s/it] 47%|████▋     | 70/149 [33:54<28:55, 21.96s/it] 48%|████▊     | 71/149 [34:18<29:26, 22.65s/it] 48%|████▊     | 72/149 [34:35<26:43, 20.82s/it] 49%|████▉     | 73/149 [35:22<36:24, 28.74s/it] 50%|████▉     | 74/149 [36:22<47:33, 38.05s/it] 50%|█████     | 75/149 [37:23<55:40, 45.14s/it] 51%|█████     | 76/149 [37:40<44:35, 36.65s/it] 52%|█████▏    | 77/149 [38:26<47:23, 39.49s/it] 52%|█████▏    | 78/149 [39:22<52:27, 44.33s/it] 53%|█████▎    | 79/149 [39:29<38:32, 33.03s/it] 54%|█████▎    | 80/149 [39:46<32:41, 28.43s/it] 54%|█████▍    | 81/149 [40:23<35:01, 30.90s/it] 55%|█████▌    | 82/149 [41:26<45:18, 40.58s/it] 56%|█████▌    | 83/149 [41:32<33:09, 30.14s/it] 56%|█████▋    | 84/149 [41:41<25:41, 23.71s/it] 57%|█████▋    | 85/149 [42:33<34:30, 32.35s/it] 58%|█████▊    | 86/149 [42:43<27:04, 25.79s/it] 58%|█████▊    | 87/149 [43:29<32:37, 31.58s/it] 59%|█████▉    | 88/149 [43:42<26:36, 26.18s/it] 60%|█████▉    | 89/149 [44:27<31:53, 31.89s/it] 60%|██████    | 90/149 [44:35<24:05, 24.51s/it] 61%|██████    | 91/149 [44:41<18:26, 19.08s/it] 62%|██████▏   | 92/149 [45:33<27:23, 28.83s/it] 62%|██████▏   | 93/149 [45:40<20:57, 22.45s/it] 63%|██████▎   | 94/149 [46:33<28:48, 31.43s/it] 64%|██████▍   | 95/149 [46:47<23:38, 26.27s/it] 64%|██████▍   | 96/149 [47:41<30:39, 34.70s/it] 65%|██████▌   | 97/149 [48:35<34:58, 40.36s/it] 66%|██████▌   | 98/149 [48:47<27:00, 31.77s/it] 66%|██████▋   | 99/149 [49:39<31:33, 37.87s/it] 67%|██████▋   | 100/149 [49:49<24:15, 29.71s/it] 68%|██████▊   | 101/149 [50:39<28:38, 35.79s/it] 68%|██████▊   | 102/149 [50:50<22:03, 28.15s/it] 69%|██████▉   | 103/149 [51:42<27:11, 35.46s/it] 70%|██████▉   | 104/149 [51:49<20:14, 26.98s/it] 70%|███████   | 105/149 [52:42<25:30, 34.79s/it] 71%|███████   | 106/149 [52:58<20:55, 29.19s/it] 72%|███████▏  | 107/149 [53:45<24:08, 34.49s/it] 72%|███████▏  | 108/149 [53:57<18:59, 27.79s/it] 73%|███████▎  | 109/149 [54:34<20:15, 30.38s/it] 74%|███████▍  | 110/149 [54:46<16:09, 24.86s/it] 74%|███████▍  | 111/149 [54:57<13:10, 20.80s/it] 75%|███████▌  | 112/149 [56:03<21:11, 34.37s/it] 76%|███████▌  | 113/149 [56:51<23:02, 38.39s/it] 77%|███████▋  | 114/149 [56:56<16:29, 28.26s/it] 77%|███████▋  | 115/149 [57:46<19:48, 34.95s/it] 78%|███████▊  | 116/149 [58:46<23:20, 42.43s/it] 79%|███████▊  | 117/149 [58:54<17:07, 32.12s/it] 79%|███████▉  | 118/149 [59:48<19:58, 38.65s/it] 80%|███████▉  | 119/149 [1:00:07<16:18, 32.63s/it] 81%|████████  | 120/149 [1:00:58<18:32, 38.35s/it] 81%|████████  | 121/149 [1:01:39<18:09, 38.91s/it] 82%|████████▏ | 122/149 [1:01:56<14:33, 32.35s/it] 83%|████████▎ | 123/149 [1:02:02<10:37, 24.54s/it] 83%|████████▎ | 124/149 [1:02:57<13:59, 33.59s/it] 84%|████████▍ | 125/149 [1:03:06<10:28, 26.20s/it] 85%|████████▍ | 126/149 [1:03:33<10:11, 26.60s/it] 85%|████████▌ | 127/149 [1:03:59<09:37, 26.26s/it] 86%|████████▌ | 128/149 [1:04:05<07:08, 20.42s/it] 87%|████████▋ | 129/149 [1:05:01<10:19, 31.00s/it] 87%|████████▋ | 130/149 [1:05:11<07:47, 24.62s/it] 88%|████████▊ | 131/149 [1:06:02<09:45, 32.51s/it] 89%|████████▊ | 132/149 [1:06:18<07:48, 27.56s/it] 89%|████████▉ | 133/149 [1:06:45<07:22, 27.63s/it] 90%|████████▉ | 134/149 [1:07:08<06:32, 26.17s/it] 91%|█████████ | 135/149 [1:07:17<04:52, 20.88s/it] 91%|█████████▏| 136/149 [1:08:09<06:32, 30.20s/it] 92%|█████████▏| 137/149 [1:08:19<04:49, 24.16s/it] 93%|█████████▎| 138/149 [1:08:34<03:55, 21.39s/it] 93%|█████████▎| 139/149 [1:09:15<04:32, 27.30s/it] 94%|█████████▍| 140/149 [1:09:32<03:37, 24.13s/it] 95%|█████████▍| 141/149 [1:10:10<03:48, 28.52s/it] 95%|█████████▌| 142/149 [1:10:22<02:43, 23.37s/it] 96%|█████████▌| 143/149 [1:10:33<01:58, 19.71s/it] 97%|█████████▋| 144/149 [1:11:09<02:03, 24.63s/it] 97%|█████████▋| 145/149 [1:11:15<01:16, 19.16s/it] 98%|█████████▊| 146/149 [1:11:51<01:11, 23.97s/it] 99%|█████████▊| 147/149 [1:12:12<00:46, 23.19s/it] 99%|█████████▉| 148/149 [1:12:17<00:17, 17.91s/it]100%|██████████| 149/149 [1:12:44<00:00, 20.61s/it]100%|██████████| 149/149 [1:12:44<00:00, 29.29s/it]
Accuracy - 0.9664429530201343
